--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,6 +1,14 @@
 # Nome da Actions:  
 name: Snake Game
-
+github-token:
+  action-input:
+    input: github_token
+    is-default: true
+  permissions:
+    contents: write
+    contents-reason: to push local changes  #Checkout: https://github.com/ad-m/github-push-action#github-action-for-github-push 
+    
+#Fixes #496
 # Controlador do tempo que sera feito a atualização dos arquivos.
 on:
   schedule:
